--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,7 @@ dependencies = [
     # Utilities
     "python-dateutil>=2.8.2",
     "aiohttp>=3.9.0",
+    "tqdm>=4.66.0",
 ]
 
 [project.optional-dependencies]
